Fix Unit and some PR Comments